namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amartinez
  labels:
     tipo: desarrollo
