app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: restapi
spec:
  selector:
    matchLabels:
      app: restapi
      tier: frontend
  replicas: 7
  template:
    metadata:
      labels:
        app: restapi
        tier: frontend
    spec:
      containers:
      - name: app-php
        image: angelemr/apirest
