mysql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: backend
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        tier: backend
    spec:
      containers:
      - name: db-mysql
        image: angelemr/db-mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
