app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  labels:
    app: restapi
    tier: frontend
spec:  
  type: NodePort 
  ports:
  - port: 80
  selector:
    app: restapi
    tier: frontend
