ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appweb
  annotations:
    nginx.ingress.kubernets.io/rewrite-target: /
spec:
  rules:
  - host: app.amartinez.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-svc
            port:
              number: 80
